andres/force-app/main/default/objects/Seller_Request__c/Seller_Request__c.object-meta.xml
<CustomObject>
    <description>A way to track seller requests</description>
    <label>Seller Request</label>
    <nameField>
        <displayFormat>Seller Request-{0000}</displayFormat>
        <label>Seller Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Seller Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>