andres/force-app/main/default/objects/Seller_Request__c/fields/Asking_Price__c.field-meta.xml
<CustomField>
    <fullName>Asking_Price__c</fullName>
    <description>The Sellers asking price</description>
    <label>Asking Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>