andres/force-app/main/default/objects/Seller_Request__c/fields/Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Car_Brand__c</fullName>
    <description>The sellers car brand of the car they are selling</description>
    <label>Car Brand</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Car_Brands</valueSetName>
    </valueSet>
</CustomField>