andres/force-app/main/default/objects/Seller_Request__c/fields/Car_Model__c.field-meta.xml
<CustomField>
    <fullName>Car_Model__c</fullName>
    <label>Car Model</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>