andres/force-app/main/default/objects/Seller_Request__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <description>First name of the seller</description>
    <label>First Name</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>