andres/force-app/main/default/objects/Seller_Request__c/fields/Model_year__c.field-meta.xml
<CustomField>
    <fullName>Model_year__c</fullName>
    <description>The model year of the sellers car</description>
    <label>Model year</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>model_year</valueSetName>
    </valueSet>
</CustomField>