andres/force-app/main/default/objects/Seller_Request__c/fields/Request_Approval__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval__c</fullName>
    <description>Whether or not the request was approved</description>
    <label>Request_Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>