andres/force-app/main/default/objects/Seller_Request__c/fields/Title_Status__c.field-meta.xml
<CustomField>
    <fullName>Title_Status__c</fullName>
    <label>Title Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clean</fullName>
            </value>
            <value>
                <fullName>Salvaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>